base/sock-shop/catalogue-db-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
    app: catalogue-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue-db
  template:
    metadata:
      labels:
        app: catalogue-db
      annotations:
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      containers:
      - name: catalogue-db
        image: weaveworksdemos/catalogue-db:0.3.0
        ports:
        - name: mysql
          containerPort: 3306
      - name: mysqld-exporter
        image: prom/mysqld-exporter
        ports:
        - containerPort: 9104
      nodeSelector:
        beta.kubernetes.io/os: linux
