base/sock-shop/session-db-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
  labels:
    app: session-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-db
  template:
    metadata:
      labels:
        app: session-db
      annotations:
        prometheus.io.scrape: "false"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      containers:
      - name: session-db
        image: redis:alpine
        ports:
        - name: redis
          containerPort: 6379
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
      - image: oliver006/redis_exporter:latest
        imagePullPolicy: Always
        name: redis-exporter
        ports:
        - containerPort: 9121
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      nodeSelector:
        beta.kubernetes.io/os: linux
