base/sock-shop/carts-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    app: carts-db
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: mongo-carts-db
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: carts-db
