base/sock-shop/carts-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    app: carts
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-carts
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: carts
