base/sock-shop/catalogue-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: mysql-catalogue-db
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: catalogue-db
