base/sock-shop/catalogue-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-catalogue
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: catalogue
