base/sock-shop/front-end-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
  namespace: sock-shop
spec:
  # type: LoadBalancer
  ports:
    - name: http-front-end
      protocol: TCP
      port: 80
      targetPort: 8079
      # nodePort: 30002
  selector:
    app: front-end
