base/sock-shop/orders-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    app: orders-db
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: mongo-orders-db
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: orders-db
