base/sock-shop/orders-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-orders
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: orders
