base/sock-shop/payment-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-payment
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: payment
