base/sock-shop/queue-master-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  labels:
    app: queue-master
  annotations:
    prometheus.io/path: "/prometheus"
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-queue-master
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: queue-master
