base/sock-shop/rabbitmq-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - port: 5672
      protocol: TCP
      name: tcp-rabbitmq
      targetPort: 5672
    - port: 4369
      name: tcp-epmd-rabbitmq
      protocol: TCP
    - port: 9090
      name: tcp-exporter-rabbitmq
      targetPort: exporter
      protocol: TCP
  selector:
    app: rabbitmq
