base/sock-shop/session-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: session-db
  labels:
    app: session-db
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: redis-session-db
      protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: session-db
