base/sock-shop/shipping-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-shipping
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: shipping
