base/sock-shop/user-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    app: user-db
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: mongo-user-db
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: user-db
