base/sock-shop/user-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
  namespace: sock-shop
spec:
  ports:
    # the port that this service should serve on
    - name: http-user
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: user
