base/sock-shop/sock-shop-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sock-shop
  namespace: sock-shop
spec:
  gateways:
    - istio-system/ingressgateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: front-end
          weight: 100
      match:
        - uri:
            prefix: "/"
